feat: add check create email availbility
