# docs/swagger.json
@@ -18,6 +18,56 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/email_checkers": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "Check Email Availibility",
+                "parameters": [
+                    {
+                        "description": "example body",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/user.CheckEmailInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/helper.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/helper.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "consumes": [
@@ -32,7 +82,7 @@
                 "summary": "Login User",
                 "parameters": [
                     {
-                        "description": " example",
+                        "description": "example body",
                         "name": "body",
                         "in": "body",
                         "schema": {
@@ -82,7 +132,7 @@
                 "summary": "Create User",
                 "parameters": [
                     {
-                        "description": " example",
+                        "description": "example body",
                         "name": "body",
                         "in": "body",
                         "schema": {
@@ -156,6 +206,17 @@
                 }
             }
         },
+        "user.CheckEmailInput": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "user.LoginInput": {
             "type": "object",
             "required": [
@@ -186,7 +247,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "description": "in: query",
                     "type": "string"
                 }
             }
