# main.go
@@ -56,6 +56,7 @@ func main() {
 		// swagger:route POST /user CreateUser
 		v1.POST("/user", userHandler.RegisterUser)
 		v1.POST("/login", userHandler.Login)
+		v1.POST("/email_checkers", userHandler.CheckEmail)
 	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Run(":8080")
